# plapre

./: README.md  pyproject.toml
plapre/: __init__.py  inference.py  server.py  speakers.json
