[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plapre"
version = "0.1.0"
description = "Danish text-to-speech synthesis"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "torch",
    "torchaudio",
    "transformers",
    "llama-cpp-python",
    "soundfile",
    "numpy",
    "huggingface-hub",
    "kanade-tokenizer @ git+https://github.com/frothywater/kanade-tokenizer",
]

[project.optional-dependencies]
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]

[project.scripts]
plapre-serve = "plapre.server:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["plapre"]
